# pysyncon

./: requirements-dev.txt  setup.cfg
pysyncon/: base.py  dataprep.py  synth.py
