[metadata]
name = pysyncon
version = 1.0.0
author = Stiofán Fordham
url = https://github.com/sdfordham/pysyncon/
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Synth,augsynth,synthetic-control-method,causal-inference,
license = MIT License

[options]
packages = pysyncon,
python_requires = >=3.8
install_requires =
    numpy
    matplotlib
    pandas
    scipy

[options.extras_require]
dev = 
    black
